# study_FastAPI

./: pyproject.toml
alembic/: env.py
alembic/versions/: 9787c04fae8c_add_message_relation.py
app/: add_role.py  config.py  database.py  main.py
app/auth/: base_config.py  manager.py  models.py  router.py
app/chat/: models.py  router.py
app/operations/: models.py  router.py
app/pages/: router.py
app/tasks/: router.py  tasks.py
app/templates/: base.html  search.html
tests/: conftest.py  test_auth.py  test_operations.py
